fix scrollbar issue

--- a/source/style.scss
+++ b/source/style.scss
@@ -31,7 +31,8 @@ main {
 .textbox {
 	@include contentSpacing();
 	max-width: 600px;
-	margin: 2em auto;
+	margin: auto;
+	padding: 2em 0.5em;
 
 	h1 {
 		text-transform: uppercase;
